syntax = "proto3";

option java_package = "grpcProtoFiles";

import "player.proto";

package team;

service TeamService {
  rpc CreateTeam (CreateTeamRequest) returns (CreateTeamResponse);
  rpc GetAllTeams (GetAllTeamsRequest) returns (GetAllTeamsResponse);
}

message CreateTeamRequest {
  Team team = 1;
}

message CreateTeamResponse {
  Team team = 1;
}

message GetAllTeamsResponse {
  repeated Team teams = 1;
}

message GetAllTeamsRequest {

}

message Team {
  string name = 1;
  repeated player.Player player = 2;
}